added *.bin to gitignor

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 *.pyc
 
 object_detection_ompss/build/*.o
+object_detection_ompss/build/*.bin
 object_detection_ompss/data/*.weights
 object_detection_ompss/data/*.mp4
