.gitignore added\nVSCode configs and formatting style added\nMoved CMakeLists.txt from src to toplevel\nMoved includes from src to toplevel folder inc\nRenamed main_TRT.c to main.c\nMoved output files and OmpSs start script from build to bin

--- a/object_detection_ompss/CMakeLists.txt
+++ b/object_detection_ompss/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 set(PROJECT_NAME YoloTRT)
 project(${PROJECT_NAME} VERSION 0.2.0 LANGUAGES CXX C)
 
-include("${CMAKE_SOURCE_DIR}/cmake/OmpSs.cmake")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+
+include("cmake/OmpSs.cmake")
 INIT_OMPSS()
 
 if("${CMAKE_BUILD_TYPE}" STREQUAL "")
@@ -19,28 +21,24 @@ find_package(CUDA)
 find_package(TENSORRT PATHS cmake/modules REQUIRED)
 
 include_directories(
-    ${NOS6_INCLUDE_DIRS}
     ${TENSORRT_INCLUDE_DIRS}
     ${CUDA_INCLUDE_DIRS}
     ${OpenCV_INCLUDE_DIRS}
-    .
-    YoloTensorRT
-    YoloTensorRT/3rdParty/nvidia
+    inc
+    inc/3rdParty/nvidia
 )
 
-file(GLOB cpp_src "*.cpp")
-file(GLOB c_src "*.c")
-
-message(STATUS "cpp_src: ${cpp_src}")
-message(STATUS "c_src: ${c_src}")
+file(GLOB cpp_src "src/*.cpp")
+file(GLOB c_src "src/*.c")
 
 ADD_LIBRARY_OMPSS(OpenCV_LIBS TENSORRT_LIBRARIES YoloLayerPlugin)
-ADD_LIBRARY_DIR_OMPSS("${CMAKE_SOURCE_DIR}/YoloTensorRT")
+ADD_LIBRARY_DIR_OMPSS("${CMAKE_SOURCE_DIR}/libs")
+ADD_INCLUDE_DIR_OMPSS("${CMAKE_SOURCE_DIR}/inc")
 
-set(MCC_OUTPUT_OBJ "main_TRT.o")
-set(MCC_OUTPUT_BIN "YoloTRT_TEST.bin")
+set(MCC_OUTPUT_BIN "YoloTRT.bin")
 
-ADD_OMPSS_EXECUTABLE(MAIN ${c_src} OUTPUT_NAME ${MCC_OUTPUT_BIN} CXX_SRC ${cpp_src})
+ADD_EXECUTABLE_OMPSS(TARGET_NAME YoloTRT MAIN ${c_src} OUTPUT_NAME ${MCC_OUTPUT_BIN} CXX_SRC ${cpp_src})
+COPY_BINARY_TO_HOST(YoloTRT "smartmirror5-2" "jasmin" ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} ${MCC_OUTPUT_BIN})
 
 ## TODO: Fix the deprecated calls
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
