Added inipp.h, a header only ini parser Settings are now loaded from a config file instead of being hard-coded into the main Added example config file config.ini

--- a/object_detection_ompss/.vscode/settings.json
+++ b/object_detection_ompss/.vscode/settings.json
@@ -66,7 +66,10 @@
         "tensor": "cpp",
         "codecvt": "cpp",
         "filesystem": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "locale": "cpp",
+        "__nullptr": "cpp",
+        "__bit_reference": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "license-header-manager.excludeFolders": [
