Fixed a bug in the types header Added diff type define to YoloTensorRTWrapper, as it is compiled separately Added image width, height and channel information as well as the use FP16 flag to the config file

--- a/object_detection_ompss/bin/config.ini
+++ b/object_detection_ompss/bin/config.ini
@@ -1,5 +1,7 @@
 ; (Valid DLA-Cores: 0 or 1) -1 disables the usage of DLAs
 DLA_CORE = 0
+; Use 16-Bit floating point units (this is automatically enabled when DLAs are used)
+USE_FP16 = true
 ONNX_FILE   = ../data/yolov4-tiny-hand-3l.onnx
 CONFIG_FILE = ../data/yolov4-tiny-hand-3l.cfg
 ; If the engine file is not present the engine is build
@@ -9,6 +11,10 @@ CLASS_FILE  = ../data/hand.names
 DETECT_STR = DETECTED_GESTURES
 AMOUNT_STR = DETECTED_GESTURES_AMOUNT
 FPS_STR = GESTURE_DET_FPS
+
+IMAGE_WIDTH = 416
+IMAGE_HEIGHT = 416
+IMAGE_CHANNEL = 3
 
 ; Valid Versions are 3 and 4
 YOLO_VERSION = 4
