Removed all static width and height values Added check for program arguments Argument 1 is used to provide the config file to read Added comments to the global variables, explaining their use Renamed some functions Removed old code

--- a/object_detection_ompss/.vscode/settings.json
+++ b/object_detection_ompss/.vscode/settings.json
@@ -69,7 +69,8 @@
         "*.inc": "cpp",
         "locale": "cpp",
         "__nullptr": "cpp",
-        "__bit_reference": "cpp"
+        "__bit_reference": "cpp",
+        "__locale": "c"
     },
     "git.ignoreLimitWarning": true,
     "license-header-manager.excludeFolders": [
