Added warning flags for C++ Fixed several warnings Renamed the include directory variable in the OmpSs CMake module Added compiling of provided additional C sources to the OmpSs CMake module

--- a/object_detection_ompss/CMakeLists.txt
+++ b/object_detection_ompss/CMakeLists.txt
@@ -20,17 +20,33 @@ find_package(OpenCV REQUIRED)
 find_package(CUDA)
 find_package(TENSORRT PATHS cmake/modules REQUIRED)
 
-include_directories(
+# System level include directories, the SYSTEM options causes
+# CMake to tell the compiler to ignore warnings within these
+# header files
+include_directories(SYSTEM
     ${TENSORRT_INCLUDE_DIRS}
     ${CUDA_INCLUDE_DIRS}
     ${OpenCV_INCLUDE_DIRS}
-    inc
     inc/3rdParty/nvidia
     inc/3rdParty/inipp
 )
 
+include_directories(
+    inc
+)
+
 file(GLOB cpp_src "src/*.cpp")
 file(GLOB c_src "src/*.c")
+
+set(cpp_flags "${cpp_flags} -pedantic") # Enable pedantic warnings
+set(cpp_flags "${cpp_flags} -Wall") # Enable all default g++ warning level
+set(cpp_flags "${cpp_flags} -Wextra") # Enable additional warnings
+set(cpp_flags "${cpp_flags} -Werror") # Treat all warnings as errors
+set(cpp_flags "${cpp_flags} -Weffc++") # Enable warnings for violates of the effective C++ guidelines
+set(cpp_flags "${cpp_flags} -Wunreachable-code") # Warn on unreachable code
+set(cpp_flags "${cpp_flags} -Wunused-result") # Warn when the result of a function is not used
+set(cpp_flags "${cpp_flags} -Wno-unused-function") # Disable the warning for unused functions
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${cpp_flags}") # Add all previous warning and standard defines to the CMake C++ flags
 
 ADD_LIBRARY_OMPSS(OpenCV_LIBS TENSORRT_LIBRARIES YoloLayerPlugin)
 ADD_LIBRARY_DIR_OMPSS("${CMAKE_SOURCE_DIR}/libs")
